src/CqlLexerParser/cqlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\dev\cql\src\Grammar\cql.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class cqlParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, T__110=111, T__111=112, T__112=113, 
		T__113=114, T__114=115, T__115=116, T__116=117, T__117=118, T__118=119, 
		T__119=120, T__120=121, T__121=122, T__122=123, T__123=124, T__124=125, 
		T__125=126, T__126=127, T__127=128, T__128=129, T__129=130, T__130=131, 
		T__131=132, T__132=133, T__133=134, T__134=135, T__135=136, T__136=137, 
		T__137=138, T__138=139, T__139=140, T__140=141, T__141=142, T__142=143, 
		T__143=144, T__144=145, T__145=146, T__146=147, T__147=148, DATETIME=149, 
		TIME=150, IDENTIFIER=151, QUOTEDIDENTIFIER=152, STRING=153, NUMBER=154, 
		WS=155, COMMENT=156, LINE_COMMENT=157;
	public const int
		RULE_library = 0, RULE_libraryDefinition = 1, RULE_usingDefinition = 2, 
		RULE_includeDefinition = 3, RULE_localIdentifier = 4, RULE_accessModifier = 5, 
		RULE_parameterDefinition = 6, RULE_codesystemDefinition = 7, RULE_valuesetDefinition = 8, 
		RULE_codesystems = 9, RULE_codesystemIdentifier = 10, RULE_libraryIdentifier = 11, 
		RULE_codeDefinition = 12, RULE_conceptDefinition = 13, RULE_codeIdentifier = 14, 
		RULE_codesystemId = 15, RULE_valuesetId = 16, RULE_versionSpecifier = 17, 
		RULE_codeId = 18, RULE_typeSpecifier = 19, RULE_namedTypeSpecifier = 20, 
		RULE_modelIdentifier = 21, RULE_listTypeSpecifier = 22, RULE_intervalTypeSpecifier = 23, 
		RULE_tupleTypeSpecifier = 24, RULE_tupleElementDefinition = 25, RULE_choiceTypeSpecifier = 26, 
		RULE_statement = 27, RULE_expressionDefinition = 28, RULE_contextDefinition = 29, 
		RULE_functionDefinition = 30, RULE_operandDefinition = 31, RULE_functionBody = 32, 
		RULE_querySource = 33, RULE_aliasedQuerySource = 34, RULE_alias = 35, 
		RULE_queryInclusionClause = 36, RULE_withClause = 37, RULE_withoutClause = 38, 
		RULE_retrieve = 39, RULE_codePath = 40, RULE_terminology = 41, RULE_qualifier = 42, 
		RULE_query = 43, RULE_sourceClause = 44, RULE_singleSourceClause = 45, 
		RULE_multipleSourceClause = 46, RULE_letClause = 47, RULE_letClauseItem = 48, 
		RULE_whereClause = 49, RULE_returnClause = 50, RULE_sortClause = 51, RULE_sortDirection = 52, 
		RULE_sortByItem = 53, RULE_qualifiedIdentifier = 54, RULE_expression = 55, 
		RULE_dateTimePrecision = 56, RULE_dateTimeComponent = 57, RULE_pluralDateTimePrecision = 58, 
		RULE_expressionTerm = 59, RULE_caseExpressionItem = 60, RULE_dateTimePrecisionSpecifier = 61, 
		RULE_relativeQualifier = 62, RULE_offsetRelativeQualifier = 63, RULE_exclusiveRelativeQualifier = 64, 
		RULE_quantityOffset = 65, RULE_temporalRelationship = 66, RULE_intervalOperatorPhrase = 67, 
		RULE_term = 68, RULE_literal = 69, RULE_intervalSelector = 70, RULE_tupleSelector = 71, 
		RULE_tupleElementSelector = 72, RULE_instanceSelector = 73, RULE_instanceElementSelector = 74, 
		RULE_listSelector = 75, RULE_displayClause = 76, RULE_codeSelector = 77, 
		RULE_conceptSelector = 78, RULE_identifier = 79, RULE_externalConstant = 80, 
		RULE_invocation = 81, RULE_function = 82, RULE_paramList = 83, RULE_quantity = 84, 
		RULE_unit = 85;
	public static readonly string[] ruleNames = {
		"library", "libraryDefinition", "usingDefinition", "includeDefinition", 
		"localIdentifier", "accessModifier", "parameterDefinition", "codesystemDefinition", 
		"valuesetDefinition", "codesystems", "codesystemIdentifier", "libraryIdentifier", 
		"codeDefinition", "conceptDefinition", "codeIdentifier", "codesystemId", 
		"valuesetId", "versionSpecifier", "codeId", "typeSpecifier", "namedTypeSpecifier", 
		"modelIdentifier", "listTypeSpecifier", "intervalTypeSpecifier", "tupleTypeSpecifier", 
		"tupleElementDefinition", "choiceTypeSpecifier", "statement", "expressionDefinition", 
		"contextDefinition", "functionDefinition", "operandDefinition", "functionBody", 
		"querySource", "aliasedQuerySource", "alias", "queryInclusionClause", 
		"withClause", "withoutClause", "retrieve", "codePath", "terminology", 
		"qualifier", "query", "sourceClause", "singleSourceClause", "multipleSourceClause", 
		"letClause", "letClauseItem", "whereClause", "returnClause", "sortClause", 
		"sortDirection", "sortByItem", "qualifiedIdentifier", "expression", "dateTimePrecision", 
		"dateTimeComponent", "pluralDateTimePrecision", "expressionTerm", "caseExpressionItem", 
		"dateTimePrecisionSpecifier", "relativeQualifier", "offsetRelativeQualifier", 
		"exclusiveRelativeQualifier", "quantityOffset", "temporalRelationship", 
		"intervalOperatorPhrase", "term", "literal", "intervalSelector", "tupleSelector", 
		"tupleElementSelector", "instanceSelector", "instanceElementSelector", 
		"listSelector", "displayClause", "codeSelector", "conceptSelector", "identifier", 
		"externalConstant", "invocation", "function", "paramList", "quantity", 
		"unit"
	};

	private static readonly string[] _LiteralNames = {
		null, "'library'", "'version'", "'using'", "'include'", "'called'", "'public'", 
		"'private'", "'parameter'", "'default'", "'codesystem'", "':'", "'valueset'", 
		"'codesystems'", "'{'", "','", "'}'", "'.'", "'code'", "'from'", "'concept'", 
		"'List'", "'<'", "'>'", "'Interval'", "'Tuple'", "'Choice'", "'define'", 
		"'context'", "'function'", "'('", "')'", "'returns'", "'external'", "'with'", 
		"'such that'", "'without'", "'['", "'in'", "']'", "'let'", "'where'", 
		"'return'", "'all'", "'distinct'", "'sort'", "'by'", "'asc'", "'ascending'", 
		"'desc'", "'descending'", "'is'", "'not'", "'null'", "'true'", "'false'", 
		"'as'", "'cast'", "'exists'", "'properly'", "'between'", "'and'", "'difference'", 
		"'<='", "'>='", "'='", "'!='", "'~'", "'!~'", "'contains'", "'or'", "'xor'", 
		"'implies'", "'|'", "'union'", "'intersect'", "'except'", "'year'", "'month'", 
		"'week'", "'day'", "'hour'", "'minute'", "'second'", "'millisecond'", 
		"'date'", "'time'", "'timezone'", "'years'", "'months'", "'weeks'", "'days'", 
		"'hours'", "'minutes'", "'seconds'", "'milliseconds'", "'convert'", "'to'", 
		"'+'", "'-'", "'start'", "'end'", "'of'", "'duration'", "'width'", "'successor'", 
		"'predecessor'", "'singleton'", "'point'", "'minimum'", "'maximum'", "'^'", 
		"'*'", "'/'", "'div'", "'mod'", "'&'", "'if'", "'then'", "'else'", "'case'", 
		"'collapse'", "'flatten'", "'when'", "'or before'", "'or after'", "'or more'", 
		"'or less'", "'less than'", "'more than'", "'on or'", "'before'", "'after'", 
		"'or on'", "'starts'", "'ends'", "'occurs'", "'same'", "'includes'", "'during'", 
		"'included in'", "'within'", "'meets'", "'overlaps'", "'display'", "'Code'", 
		"'Concept'", "'%'", "'$this'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "DATETIME", "TIME", "IDENTIFIER", "QUOTEDIDENTIFIER", 
		"STRING", "NUMBER", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "cql.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static cqlParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public cqlParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public cqlParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class LibraryContext : ParserRuleContext {
		public LibraryDefinitionContext libraryDefinition() {
			return GetRuleContext<LibraryDefinitionContext>(0);
		}
		public UsingDefinitionContext[] usingDefinition() {
			return GetRuleContexts<UsingDefinitionContext>();
		}
		public UsingDefinitionContext usingDefinition(int i) {
			return GetRuleContext<UsingDefinitionContext>(i);
		}
		public IncludeDefinitionContext[] includeDefinition() {
			return GetRuleContexts<IncludeDefinitionContext>();
		}
		public IncludeDefinitionContext includeDefinition(int i) {
			return GetRuleContext<IncludeDefinitionContext>(i);
		}
		public CodesystemDefinitionContext[] codesystemDefinition() {
			return GetRuleContexts<CodesystemDefinitionContext>();
		}
		public CodesystemDefinitionContext codesystemDefinition(int i) {
			return GetRuleContext<CodesystemDefinitionContext>(i);
		}
		public ValuesetDefinitionContext[] valuesetDefinition() {
			return GetRuleContexts<ValuesetDefinitionContext>();
		}
		public ValuesetDefinitionContext valuesetDefinition(int i) {
			return GetRuleContext<ValuesetDefinitionContext>(i);
		}
		public CodeDefinitionContext[] codeDefinition() {
			return GetRuleContexts<CodeDefinitionContext>();
		}
		public CodeDefinitionContext codeDefinition(int i) {
			return GetRuleContext<CodeDefinitionContext>(i);
		}
		public ConceptDefinitionContext[] conceptDefinition() {
			return GetRuleContexts<ConceptDefinitionContext>();
		}
		public ConceptDefinitionContext conceptDefinition(int i) {
			return GetRuleContext<ConceptDefinitionContext>(i);
		}
		public ParameterDefinitionContext[] parameterDefinition() {
			return GetRuleContexts<ParameterDefinitionContext>();
		}
		public ParameterDefinitionContext parameterDefinition(int i) {
			return GetRuleContext<ParameterDefinitionContext>(i);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public LibraryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_library; } }
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterLibrary(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitLibrary(this);
		}
	}

	[RuleVersion(0)]
	public LibraryContext library() {
		LibraryContext _localctx = new LibraryContext(Context, State);
		EnterRule(_localctx, 0, RULE_library);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 173;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__0) {
				{
				State = 172; libraryDefinition();
				}
			}

			State = 178;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__2) {
				{
				{
				State = 175; usingDefinition();
				}
				}
				State = 180;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 184;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__3) {
				{
				{
				State = 181; includeDefinition();
				}
				}
				State = 186;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 190;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 187; codesystemDefinition();
					}
					} 
				}
				State = 192;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			State = 196;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 193; valuesetDefinition();
					}
					} 
				}
				State = 198;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			State = 202;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 199; codeDefinition();
					}
					} 
				}
				State = 204;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			State = 208;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 205; conceptDefinition();
					}
					} 
				}
				State = 210;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			State = 214;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) {
				{
				{
				State = 211; parameterDefinition();
				}
				}
				State = 216;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 220;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__26 || _la==T__27) {
				{
				{
				State = 217; statement();
				}
				}
				State = 222;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LibraryDefinitionContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public VersionSpecifierContext versionSpecifier() {
			return GetRuleContext<VersionSpecifierContext>(0);
		}
		public LibraryDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_libraryDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterLibraryDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitLibraryDefinition(this);
		}
	}

	[RuleVersion(0)]
	public LibraryDefinitionContext libraryDefinition() {
		LibraryDefinitionContext _localctx = new LibraryDefinitionContext(Context, State);
		EnterRule(_localctx, 2, RULE_libraryDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 223; Match(T__0);
			State = 224; identifier();
			State = 227;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 225; Match(T__1);
				State = 226; versionSpecifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingDefinitionContext : ParserRuleContext {
		public ModelIdentifierContext modelIdentifier() {
			return GetRuleContext<ModelIdentifierContext>(0);
		}
		public VersionSpecifierContext versionSpecifier() {
			return GetRuleContext<VersionSpecifierContext>(0);
		}
		public UsingDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.EnterUsingDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IcqlListener typedListener = listener as IcqlListener;
			if (typedListener != null) typedListener.ExitUsingDefinition(this);
		}
	}

	[RuleVersion(0)]
	public UsingDefinitionContext usingDefinition() {
		UsingDefinitionContext _localctx = new UsingDefinitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_usingDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 229; Match(T__2);
			State = 230; modelIdentifier();
			State = 233;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 231; Match(T__1);
				State = 232; versionSpecifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
